[QCCR1E135095][BugHunting][AMBrowser] Clicking blank area of 'Search' shows windows with green border on IE

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -146,3 +146,7 @@ table {
 .justify-around {
   justify-content: space-around;
 }
+
+.grommetux-tiles:focus {
+  outline: none;
+}
